# sicp-reg-machine

./: .gitignore  Cargo.toml  README.md
examples/: ec-eval.rkt  ec_evaluator.rs  factorial.rs  fibonacci.rs  gcd.rs  gcd_v2.rs  gcd_v3.rs  iterative_exp.rs  newton.rs  newton_v2.rs  recursive_exp.rs  recursive_factorial.rs
examples/ec_evaluator/: controller.scm  environment.rs  main.rs  operations.rs
examples/ec_evaluator/supports/: environment.rs  io.rs  list.rs  mod.rs  primitive.rs  syntax.rs
src/: assemble.rs  lib.rs  main.rs  math.rs  parser.rs
src/machine/: assemble.rs  errors.rs  function.rs  machine.rs  mod.rs  operation.rs  procedure.rs  register.rs  stack.rs  value.rs
tests/: rml_insts.scm
