[package]
name = "reg_machine"
version = "1.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl-trait-for-tuples = "0.2.1"
nom = "6.2.1"
thiserror = "1.0"

[dev-dependencies]
fancy-regex = "0.7.0"
lazy_static = "1.4.0"