[package]
name = "reg_machine"
version = "1.6.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
nom = "6.2.1"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.9.0"
fancy-regex = "0.7.0"
lazy_static = "1.4.0"